--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,9 @@ body{
     margin-left: 16px;
     display: inline-block;
 }
+.accordion-button:focus {
+    box-shadow: none!important;
+}
 @media (max-width: 991.98px) {
     .author-img{
         width: 75px;
